--- a/Templates/AppSource App/.github/workflows/CreateOnlineDevelopmentEnvironment.yaml
+++ b/Templates/AppSource App/.github/workflows/CreateOnlineDevelopmentEnvironment.yaml
@@ -23,6 +23,10 @@ on:
       useGhTokenWorkflow:
         description: Use GhTokenWorkflow for Pull Request/COMMIT
         type: boolean
+      tempGhTokenWorkflow:
+        description: Temporary Personal Access Token to use as GhTokenWorkflow
+        required: false
+        default: ''
 
 permissions:
   contents: write
@@ -100,6 +104,18 @@ jobs:
     env:
       deviceCode: ${{ needs.Initialization.outputs.deviceCode }}
     steps:
+      - name: Mask Token
+        id: tempGhTokenWorkflow
+        run: |
+          $eventPath = Get-Content -Encoding UTF8 -Path $env:GITHUB_EVENT_PATH -Raw | ConvertFrom-Json
+          $tempGhTokenWorkflow = $eventPath.inputs.tempGhTokenWorkflow
+          if ($tempGhTokenWorkflow) {
+            Write-Host "::add-mask::$tempGhTokenWorkflow"
+            $tempGhTokenWorkflow = [Convert]::ToBase64String([System.Text.Encoding]::UTF8.GetBytes($tempGhTokenWorkflow))
+            Write-Host "::add-mask::$tempGhTokenWorkflow"
+          }
+          Add-Content -Encoding UTF8 -Path $ENV:GITHUB_OUTPUT -Value "tempGhTokenWorkflow=$tempGhTokenWorkflow"
+
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -115,6 +131,7 @@ jobs:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
           getSecrets: 'adminCenterApiCredentials,TokenForPush'
+          tempGhTokenWorkflow: ${{ steps.tempGhTokenWorkflow.outputs.tempGhTokenWorkflow }}
           useGhTokenWorkflowForPush: '${{ github.event.inputs.useGhTokenWorkflow }}'
 
       - name: Set AdminCenterApiCredentials
