--- a/Templates/AppSource App/.github/workflows/CreateRelease.yaml
+++ b/Templates/AppSource App/.github/workflows/CreateRelease.yaml
@@ -38,6 +38,10 @@ on:
       useGhTokenWorkflow:
         description: Use GhTokenWorkflow for Pull Request/COMMIT
         type: boolean
+      tempGhTokenWorkflow:
+        description: Temporary Personal Access Token to use as GhTokenWorkflow
+        required: false
+        default: ''
 
 permissions:
   contents: write
@@ -308,6 +312,21 @@ jobs:
     runs-on: [ windows-latest ]
     needs: [ CreateRelease, UploadArtifacts ]
     steps:
+      - name: Mask Token
+        id: tempGhTokenWorkflow
+        run: |
+          $eventPath = Get-Content -Encoding UTF8 -Path $env:GITHUB_EVENT_PATH -Raw | ConvertFrom-Json
+          $tempGhTokenWorkflow = $eventPath.inputs.tempGhTokenWorkflow
+          if ($tempGhTokenWorkflow) {
+            Write-Host "::add-mask::$tempGhTokenWorkflow"
+            $tempGhTokenWorkflow = [Convert]::ToBase64String([System.Text.Encoding]::UTF8.GetBytes($tempGhTokenWorkflow))
+            Write-Host "::add-mask::$tempGhTokenWorkflow"
+          }
+          Add-Content -Encoding UTF8 -Path $ENV:GITHUB_OUTPUT -Value "tempGhTokenWorkflow=$tempGhTokenWorkflow"
+
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Read settings
         uses: microsoft/AL-Go-Actions/ReadSettings@main
         with:
@@ -320,6 +339,7 @@ jobs:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
           getSecrets: 'TokenForPush'
+          tempGhTokenWorkflow: ${{ steps.tempGhTokenWorkflow.outputs.tempGhTokenWorkflow }}
           useGhTokenWorkflowForPush: '${{ github.event.inputs.useGhTokenWorkflow }}'
 
       - name: Update Version Number
