--- a/.github/workflows/powershell.yaml
+++ b/.github/workflows/powershell.yaml
@@ -21,16 +21,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Run PSScriptAnalyzer
-        uses: microsoft/psscriptanalyzer-action@v1.1
-        with:
-          path: .\
-          recurse: true
-          excludeRule: '"PSAvoidUsingInvokeExpression", "PSUseShouldProcessForStateChangingFunctions", "PSAvoidUsingWriteHost", "PSAvoidUsingCmdletAliases"'
-          output: results.sarif
-
       # Upload the SARIF file generated in the previous step
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@v2
         with:
-          sarif_file: results.sarif
+          sarif_file: $ENV:GITHUB_WORKSPACE\System Application_ErrorLog_WW.sarif
