Add test to test that workflows are similar

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -24,5 +24,7 @@ jobs:
       - name: Test AL-GO Workflows
         if: github.repository_owner == 'microsoft'
         run: |
-          . (Join-Path "." "Tests/WorkflowSanitation/WorkflowFileExtensions.Test.ps1")
-          . (Join-Path "." "Tests/WorkflowSanitation/WorkflowReferences.Test.ps1")
+          Get-ChildItem -Path (Join-Path "." "Tests/WorkflowSanitation") -Filter "*.Test.ps1")" -File | ForEach-Object {
+            Write-Host "Running $($_.Name)"
+            . $_.FullName
+          }
